# realsense_sdk

samples/src/record_sync_sample/: CMakeLists.txt  main.cpp
samples/src/record_sync_sample/config/: or_zr300_sync_color-640x480-rgb8-30_depth-320x240-z16-30_frames-200.json  pt_zr300_sync_color-320x240-rgb8-30_depth-320x240-z16-30_frames-200.json  slam_zr300_sync_color-640x480-rgb8-30_depth-320x240-z16-fisheye-640x480-raw-30_frames-200.json
